# WasmFaas

./: Cargo.toml  docker-compose.yaml
api/: Cargo.toml  Dockerfile  api.dockerfile  base.dockerfile  migrate.dockerfile
api/boilerplate/: Cargo.toml
api/config/: default.toml  dev.toml  staging.toml
api/migrations/2023-05-07-202743_functions/: down.sql  up.sql
api/src/: extensions.rs  extract.rs  lib.rs  main.rs  settings.rs  state.rs  status.rs
api/src/db/: mod.rs  schema.rs
api/src/db/models/: error.rs  function.rs  invoke_requests.rs  mod.rs
api/src/handlers/: deploy.rs  invoke.rs  mod.rs  result.rs  ws.rs
api/src/proto/: mod.rs
api/src/registry/: error.rs  mod.rs  registry.rs  worker.rs
api/src/util/: compiler.rs  mod.rs  wasm.rs
api/src/util/storage/: local.rs  mod.rs
boilerplate/src/: lib.mrs
config/: dev.env
containers/src/api/: Cargo.toml
containers/src/api/config/: default.toml
containers/src/api/src/: settings.rs  state.rs
containers/src/api/src/handlers/: deploy.rs
containers/src/api/src/storage/: local.rs  mod.rs
envoy/: envoy.dockerfile
envoy/etc/envoy/: envoy.dev.yaml  envoy.staging.yaml  envoy.yaml
src/: compile.rs  compiler.rs  lib.rs  main.rs  state.rs  status.rs  streams.rs
src/handlers/: deploy.rs  invoke.rs  mod.rs  ws.rs
src/proto/: mod.rs
src/registry/: mod.rs  proto.rs
src/storage/: local.rs  mod.rs
worker-nodejs/: config.dev.js  config.js  config.staging.js  index.js  package.json  worker.dockerfile
worker-nodejs/wasmfaas-js/: index.js
worker-nodejs/wasmfaas-js/lib/: client.js  executor.js  store.js
worker-reactjs/: package.json  worker.dockerfile
worker-reactjs/public/: index.html
worker-reactjs/src/: App.js  config.dev.js  config.js  config.staging.js  index.js
worker-reactjs/src/wasmfaas-js/: index.js
worker-reactjs/src/wasmfaas-js/lib/: client.js  executor.js  store.js
