[package]
name = "faas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum ={ version="x", features =["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "ws"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5.0"
wasmer = "3.2.1"
wasm-bindgen = "0.2.84"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
[workspace]
members =["faas-client", "boilerplate"]
