[package]
name = "faas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum ={ version="0.6.18", features =["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "ws", "macros"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmer = "3.2.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
axum-macros = "0.3.7"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
tracing = "0.1.37"
thiserror = "1.0.40"
config = "0.13.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures = "0.3.28"
uuid = {version = "1.3.2", features=["v4", "fast-rng"]}
diesel-async = {version = "0.2.2", features=["bb8", "postgres"]}
diesel = { version = "2.0.4", features=["serde_json", "postgres_backend", "postgres"]}
rand = "0.8.5"
